@@ -1170,17 +1170,6 @@ if (matchDomain('aftonbladet.se')) {
   }
 }
 
-else if (matchDomain('dn.se')) {
-  let url = window.location.href;
-  let paywall = document.querySelector('div.esi-paywall');
-  if (paywall) {
-    removeDOMElement(paywall);
-    let article = document.querySelector('div.article__content');
-    if (article)
-      article.appendChild(archiveLink(url));
-  }
-}
-
 else if (matchDomain('etc.se')) {
   let paywall = document.querySelector('div.paywalled');
   if (paywall) {
@@ -4200,17 +4189,6 @@ else if (matchDomain('puck.news')) {
     let article_style = document.querySelector('article[style]');
     if (article_style)
       article_style.removeAttribute('style');
-  }
-}
-
-else if (matchDomain('quillette.com')) {
-  let url = window.location.href;
-  let paywall = document.querySelector('aside.gh-post-upgrade-cta');
-  if (paywall) {
-    removeDOMElement(paywall);
-    let article = document.querySelector('article');
-    if (article)
-      article.appendChild(archiveLink(url));
   }
 }
 
