@@ -179,7 +179,6 @@
     "*://*.digiday.com/*",
     "*://*.discovermagazine.com/*",
     "*://*.dn.no/*",
-    "*://*.dn.se/*",
     "*://*.dna.fr/*",
     "*://*.dvhn.nl/*",
     "*://*.eastbaytimes.com/*",
@@ -518,7 +517,6 @@
     "*://*.public.fr/*",
     "*://*.puck.news/*",
     "*://*.pzc.nl/*",
-    "*://*.quillette.com/*",
     "*://*.quora.com/*",
     "*://*.quotidiano.net/*",
     "*://*.quotidianodipuglia.it/*",
